fixed spacing issues with max-width

--- a/site/styles.css
+++ b/site/styles.css
@@ -31,7 +31,6 @@ h2 {
 .page-section {
     background-color: #DDDDDD;
     padding: 60px 135px;
-    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -61,7 +60,7 @@ h2 {
     font-size: 90px;
 }
 
-@media (max-width: 600px) {
+@media (max-width:600px) {
     .hero-text {
         padding: 25px;
     }
@@ -134,7 +133,6 @@ h2 {
 .page-section {
     background-color: #DDDDDD;
     padding: 60px 135px;
-    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -248,8 +246,7 @@ h2 {
     flex-direction: row;
     justify-content: space-around;
     background-color: white;
-    padding: 60px 135px;
-    max-width: 1440px;
+    padding: 40px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -394,7 +391,6 @@ h2 {
     background-color: white;
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-column-gap: 10%;
 }
 
 @media (max-width:1000px) {
@@ -469,6 +465,7 @@ h2 {
 .month-in-review {
     padding: 40px;
     background-color: lightgray;
+    align-items: center;
 }
 
 @media (max-width:700px) {
@@ -480,6 +477,7 @@ h2 {
 .month-in-review-content {
     display: flex;
     flex-direction: row;
+    justify-content: space-evenly;
 }
 
 @media (max-width:700px) {
@@ -573,7 +571,7 @@ footer {
     background-color: gray;
 }
 
-@media (max-width:700px) {
+@media (max-width:900px) {
     footer {
         padding: 10px;
     }
@@ -585,7 +583,7 @@ footer {
     color: white;
 }
 
-@media (max-width:700px) {
+@media (max-width:900px) {
     .footer-title {
         padding: 10px;
         font-size: 30px;
@@ -604,7 +602,6 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
 }
 
 @media (max-width:700px) {
@@ -620,9 +617,10 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 
-@media (max-width:700px) {
+@media (max-width:900px) {
     .interaction-buttons-2 {
         flex-direction: column;
         font-size: 25px;
@@ -639,7 +637,7 @@ footer {
     background-color: gray;
 }
 
-@media (max-width:700px) {
+@media (max-width:900px) {
     .interaction-buttons-box {
         padding: 10px;
         border-width: 5px;
@@ -658,7 +656,7 @@ footer {
     background-color: white;
 }
 
-@media (max-width:700px) {
+@media (max-width:900px) {
     .shop-interaction-button {
         padding: 10px;
         border-width: 3px;
